--- a/style.css
+++ b/style.css
@@ -65,6 +65,10 @@ body{
     right: 0;
     padding: 5px;
  }
+ .owners{
+   width: 25%;
+   height: auto;
+ }
   @media screen and (max-width: 600px) {
     .topnav a:not(:first-child) {display: none;}
     .topnav a.icon {
@@ -96,5 +100,8 @@ body{
     .logo{
       width:100%;
       height:auto;
+    }
+    .owners{
+      width: 50%;
     }
   }
